<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Khazana</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="emailhelptext">email</string>
    <string name="passwordhelp">password</string>
    <string name="login_lable">Login</string>
    <string name="register_lable">Register</string>
    <string name="firstnamehint">First Name</string>
    <string name="lastnamehint">Last Name</string>
    <string name="passwordhint">Password</string>
    <string name="confirmpasswordhint">Confirm</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="enterTransaction">ADD NEW TRANSACTION</string>
    <string name="viewStatement">VIEW STATEMENT</string>
    <string name="title_activity_add_transaction">AddTransactionActivity</string>
    <string name="transactionDescription">Transaction Details</string>
    <string name="credit">CREDIT</string>
    <string name="debit">DEBIT</string>
    <string name="amount">AMOUNT</string>
    <string name="submitButton">SUBMIT</string>
    <string name="title_activity_view_statement">ViewStatementActivity</string>
    <string name="Statement">STATEMENT</string>
    <string name="helpText">*All fields are mandatory</string>
    <string name="Date_Time">Date_Time</string>
    <string name="balance">Balance</string>
    <string name="todayStatement">Today\'s Statement</string>

</resources>
