<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huzaif.khazana.MenuActivity" >

        
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" 
        android:orientation="vertical">
        
         
    <HorizontalScrollView 
        android:id="@+id/horizontalView" 
        android:layout_height="wrap_content"     
        android:layout_width="wrap_content"      
        android:scrollbars="horizontal|vertical"
        android:layout_marginTop="5dip"
        android:fillViewport="true">
        
   <RelativeLayout 
        android:layout_height="wrap_content"     
        android:layout_width="wrap_content" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todayStatement" />
    
    <TableLayout  
        android:id="@+id/tablelayoutTimerTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text1"     
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="20dp" 
        >   
        
        
 		<TableRow
 		    android:padding="5dp">  
         <TextView     	    
    	    android:id="@+id/column11"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/Date_Time"
    	    />
         
           <TextView     	    
    	    android:id="@+id/column21"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/transactionDescription"
    	    />
           
            <TextView     	    
    	    android:id="@+id/column31"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/debit"
    	    />
            
            <TextView     	    
    	    android:id="@+id/column41"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/credit"
    	    />
            
            <TextView     	    
    	    android:id="@+id/column51"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/balance"
    	    />
    	</TableRow>    
    	
 		<TableRow
 		    android:padding="5dp">  
 		    
 		    <TextView     	    
    	    android:id="@+id/getData11"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"	    
        	android:layout_span="5"
    	    />
 		    </TableRow>
 		    
    	</TableLayout>
    	</RelativeLayout>

    	</HorizontalScrollView>
    <Button 
        android:id="@+id/enterTransaction"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:contentDescription="@string/enterTransaction"
        android:onClick="newTransaction"     
        android:text="@string/enterTransaction"   
        />
    
    <Button 
        android:id="@+id/viewStatement"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:contentDescription="@string/enterTransaction"
        android:onClick="viewStatement"     
        android:text="@string/viewStatement"   
        />
    </LinearLayout>
    


</ScrollView>
